[tool.poetry]
name = "changedet"
version = "0.1.0"
homepage = "https://github.com/ashnair1/changedet"
description = "Change Detection Toolbox."
authors = ["Ashwin Nair <ashnair0007@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "changedet" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
fire = "0.4.0"
rasterio = "^1.2.0"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
scipy = "^1.6.3"
termcolor = "^1.1.0"
types-termcolor = "^1.1.2"
tqdm = "^4.61.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black  = { version = "^22.1.0"}
coverage = {extras = ["toml"], version = "^6.2"}
isort  = { version = "^5.10.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0"}
pytest  = { version = "^6.2.0"}
pytest-cov  = { version = "^2.10.1"}
virtualenv  = { version = "^20.2.2"}
pip  = { version = "^22.0"}
twine  = { version = "^3.3.0"}
pre-commit = {version = "^2.12.0"}
toml = {version = "^0.10.2"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
livereload = {version = "^2.6.3", optional = true}
mkdocs  = { version = "^1.3.0"}
mkdocs-include-markdown-plugin  = { version = "^3.0.0"}
mkdocs-material  = { version = "^8.2.1"}
mkdocstrings  = { version = "^0.19.0"}
mkdocstrings-python = { version = "^0.7.1"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-literate-nav = {version = "^0.4.0"}
mkdocs-gen-files = {version = "^0.3.3"}
mkdocs-section-index = {version = "^0.3.1"}
mkdocs-autorefs = {version = "^0.3.1"}

[tool.poetry.scripts]
changedet = 'changedet.cli:main'

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
sections = ['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']
known_first_party = ['changedet']
known_third_party = ['torch','numpy']
force_grid_wrap = 0
line_length = 90
multi_line_output = 3

[tool.coverage.run]
source = ["changedet"]
branch = true
omit = ["changedet/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]