[tool.poetry]
name = "changedet"
version = "0.1.0"
homepage = "https://github.com/ashnair1/changedet"
description = "Change Detection Toolbox."
authors = ["Ashwin Nair <ashnair0007@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "changedet" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fire = "^0.7.0"
rasterio = "^1.4.0"
matplotlib = "^3.10.0"
numpy = "^2.0.0"
scipy = "^1.16.0"
termcolor = "^3.0.0"
types-termcolor = "^1.1.2"
tqdm = "^4.67.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black  = { version = "^24.10.0"}
coverage = {extras = ["toml"], version = "^7.0"}
isort  = { version = "^5.13.0"}
flake8  = { version = "^7.0.0"}
flake8-docstrings = { version = "^1.6.0"}
pytest  = { version = "^8.0.0"}
pytest-cov  = { version = "^6.0.0"}
virtualenv  = { version = "^20.2.2"}
pip  = { version = "^22.0"}
twine  = { version = "^3.3.0"}
pre-commit = {version = "^4.0.0"}
toml = {version = "^0.10.2"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
livereload = {version = "^2.6.3", optional = true}
mkdocs  = { version = "^1.6.0"}
mkdocs-include-markdown-plugin  = { version = "^6.0.0"}
mkdocs-material  = { version = "^9.5.0"}
mkdocstrings  = { version = "^0.26.0"}
mkdocstrings-python = { version = "^1.0.0"}
mkdocs-literate-nav = {version = "^0.6.0"}
mkdocs-gen-files = {version = "^0.5.0"}
mkdocs-section-index = {version = "^0.3.1"}
mkdocs-autorefs = {version = "^1.2.0"}
griffe = "^0.49"

[tool.poetry.scripts]
changedet = 'changedet.cli:main'

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
sections = ['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']
known_first_party = ['changedet']
known_third_party = ['torch','numpy']
force_grid_wrap = 0
line_length = 90
multi_line_output = 3

[tool.coverage.run]
source = ["changedet"]
branch = true
omit = ["changedet/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]